fixed margin + scrollbar width

--- a/src/stories/post-list.css
+++ b/src/stories/post-list.css
@@ -1,5 +1,7 @@
 .post-list {
   padding: 0;
+  margin: 0.5rem;
+  margin-top: 1.5rem;
   max-height:200px;
 }
 
@@ -20,19 +22,19 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 1rem;
 }
 
 ::-webkit-scrollbar-track {
-    background: #282828; 
+    background: transparent; 
     
 }
  
 ::-webkit-scrollbar-thumb {
-    background: #928374; 
+    background: #433e3a; 
     
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #514945; 
 }
